force-app/main/default/objects/Card_Product__c/Card_Product__c.object-meta.xml
<CustomObject>
    <description>Used to track the progress of Commercial card applications from Sales &gt; Underwriting &gt; Implementations</description>
    <label>Card Product</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Card Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Card Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>