force-app/main/default/objects/Card_Product__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Related Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Card Products</relationshipLabel>
    <relationshipName>Card_Products</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>