force-app/main/default/objects/Card_Product__c/fields/Account_Types__c.field-meta.xml
<CustomField>
    <fullName>Account_Types__c</fullName>
    <label>Billing Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Individual Bill</fullName>
            </value>
            <value>
                <fullName>One Central Bill (Entire Co)</fullName>
            </value>
            <value>
                <fullName>Separate Bill for Each Sub Level</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>