force-app/main/default/objects/Card_Product__c/fields/Adverse_Action_Letter_Mailed__c.field-meta.xml
<CustomField>
    <fullName>Adverse_Action_Letter_Mailed__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Adverse Action Letter Mailed</label>
    <type>Date</type>
</CustomField>