force-app/main/default/objects/Card_Product__c/fields/Agent_Bank_Notified__c.field-meta.xml
<CustomField>
    <fullName>Agent_Bank_Notified__c</fullName>
    <description>Date that the Agent Bank is notified of the Adverse action when a Card Product is &quot;Declined&quot; in Salesforce</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Agent Bank Notified</label>
    <type>Date</type>
</CustomField>