force-app/main/default/objects/Card_Product__c/fields/Agent_Commercial_Lender_Name__c.field-meta.xml
<CustomField>
    <fullName>Agent_Commercial_Lender_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agent Commercial Lender Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Card Products (Agent Commercial Lender Name)</relationshipLabel>
    <relationshipName>Card_Products3</relationshipName>
    <type>Lookup</type>
</CustomField>