force-app/main/default/objects/Card_Product__c/fields/Agent_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Agent_Contact_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agent Contact Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Card Products</relationshipLabel>
    <relationshipName>Card_Products</relationshipName>
    <type>Lookup</type>
</CustomField>