force-app/main/default/objects/Card_Product__c/fields/AGR__c.field-meta.xml
<CustomField>
    <fullName>AGR__c</fullName>
    <label>AGR</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>&gt;$1,000,000</fullName>
            </value>
            <value>
                <fullName>≤$1,000,000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>