force-app/main/default/objects/Card_Product__c/fields/Agreement_Sent_to_Company_Date__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Sent_to_Company_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Agreement Sent to Company Date</label>
    <type>Date</type>
</CustomField>