force-app/main/default/objects/Card_Product__c/fields/Annual_Fee_Card_Amt__c.field-meta.xml
<CustomField>
    <fullName>Annual_Fee_Card_Amt__c</fullName>
    <label>Annual Fee/Card Amt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>