force-app/main/default/objects/Card_Product__c/fields/Annual_Spend__c.field-meta.xml
<CustomField>
    <fullName>Annual_Spend__c</fullName>
    <label>Annual Spend $</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>