force-app/main/default/objects/Card_Product__c/fields/Annual_Spend_Formula__c.field-meta.xml
<CustomField>
    <fullName>Annual_Spend_Formula__c</fullName>
    <formula>Opportunity__r.Annual_Spend__c</formula>
    <label>Annual Spend</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>