force-app/main/default/objects/Card_Product__c/fields/Annual_Spend_Hist__c.field-meta.xml
<CustomField>
    <fullName>Annual_Spend_Hist__c</fullName>
    <description>This Field is being used to look at card spend historically capturing information captured before &quot;Card Product&quot; was created and merging it when applicable with the new method.</description>
    <formula>if(  ISBLANK(Annual_Spend_Formula__c),  Annual_Spend__c , Annual_Spend_Formula__c)</formula>
    <label>Annual Spend (Hist)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>