force-app/main/default/objects/Card_Product__c/fields/Application_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Application_Completed_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Application Completed Date</label>
    <type>DateTime</type>
</CustomField>