force-app/main/default/objects/Card_Product__c/fields/Approved_Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>Approved_Credit_Limit__c</fullName>
    <label>(*) Approved Credit Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>