force-app/main/default/objects/Card_Product__c/fields/APR_Notes__c.field-meta.xml
<CustomField>
    <fullName>APR_Notes__c</fullName>
    <label>Min Pay</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>10%</fullName>
            </value>
            <value>
                <fullName>25%</fullName>
            </value>
            <value>
                <fullName>50%</fullName>
            </value>
            <value>
                <fullName>100%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>