force-app/main/default/objects/Card_Product__c/fields/Auto_Calculate_1_2_Estimated_Spend__c.field-meta.xml
<CustomField>
    <fullName>Auto_Calculate_1_2_Estimated_Spend__c</fullName>
    <formula>Est_Total_Potential_Spend__c  / 2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calculated Est. 180 Day Spend</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>