force-app/main/default/objects/Card_Product__c/fields/Billing_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Billing_Cycle__c</fullName>
    <label>Billing Cycle</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Beginning of Month</fullName>
            </value>
            <value>
                <fullName>Last Business Day of Month</fullName>
            </value>
            <value>
                <fullName>Middle</fullName>
            </value>
            <value>
                <fullName>None Requested</fullName>
            </value>
            <value>
                <fullName>Specific Billing Cycle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>