force-app/main/default/objects/Card_Product__c/fields/Bora_Notes__c.field-meta.xml
<CustomField>
    <fullName>Bora_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Bora Notes</label>
    <type>TextArea</type>
</CustomField>