force-app/main/default/objects/Card_Product__c/fields/Business_Name_on_Cards__c.field-meta.xml
<CustomField>
    <fullName>Business_Name_on_Cards__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>(*) Bus. Name on Cards (22 Chr Max VOX)</label>
    <length>25</length>
    <type>Text</type>
</CustomField>