force-app/main/default/objects/Card_Product__c/fields/Business_Score_SCR1__c.field-meta.xml
<CustomField>
    <fullName>Business_Score_SCR1__c</fullName>
    <label>Business Score - SCR1</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>