force-app/main/default/objects/Card_Product__c/fields/Business_Travel__c.field-meta.xml
<CustomField>
    <fullName>Business_Travel__c</fullName>
    <label>Business Travel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>