force-app/main/default/objects/Card_Product__c/fields/Card_Product__c.field-meta.xml
<CustomField>
    <fullName>Card_Product__c</fullName>
    <label>(*) Card Product</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Commercial &amp; Purchasing</fullName>
            </value>
            <value>
                <fullName>Commercial Edition</fullName>
            </value>
            <value>
                <fullName>Purchasing Edition</fullName>
            </value>
            <value>
                <fullName>Purchasing with Virtual+</fullName>
            </value>
            <value>
                <fullName>VOX</fullName>
            </value>
            <value>
                <fullName>Still Needed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>