force-app/main/default/objects/Card_Product__c/fields/Cardholder_List__c.field-meta.xml
<CustomField>
    <fullName>Cardholder_List__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cardholder List</label>
    <type>Checkbox</type>
</CustomField>