force-app/main/default/objects/Card_Product__c/fields/Cards_Mailed_Date__c.field-meta.xml
<CustomField>
    <fullName>Cards_Mailed_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cards Mailed Date</label>
    <type>DateTime</type>
</CustomField>