force-app/main/default/objects/Card_Product__c/fields/Cash_Access__c.field-meta.xml
<CustomField>
    <fullName>Cash_Access__c</fullName>
    <label>Cash Access</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>