force-app/main/default/objects/Card_Product__c/fields/Cash_Secured_Amount__c.field-meta.xml
<CustomField>
    <fullName>Cash_Secured_Amount__c</fullName>
    <label>Cash Secured Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>