force-app/main/default/objects/Card_Product__c/fields/CCOR_Completed__c.field-meta.xml
<CustomField>
    <fullName>CCOR_Completed__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CCOR Completed</label>
    <type>Date</type>
</CustomField>