force-app/main/default/objects/Card_Product__c/fields/CCOR_Demo_Date__c.field-meta.xml
<CustomField>
    <fullName>CCOR_Demo_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CCA Demo Provided</label>
    <type>Date</type>
</CustomField>