force-app/main/default/objects/Card_Product__c/fields/CCOR_Demo_Provided__c.field-meta.xml
<CustomField>
    <fullName>CCOR_Demo_Provided__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CCOR Demo Provided</label>
    <type>Checkbox</type>
</CustomField>