force-app/main/default/objects/Card_Product__c/fields/CCOR_Notes_Comments__c.field-meta.xml
<CustomField>
    <fullName>CCOR_Notes_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CCOR Notes/Comments</label>
    <type>TextArea</type>
</CustomField>