force-app/main/default/objects/Card_Product__c/fields/CCOR_Phase_1__c.field-meta.xml
<CustomField>
    <fullName>CCOR_Phase_1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CCOR Phase 1</label>
    <type>Date</type>
</CustomField>