force-app/main/default/objects/Card_Product__c/fields/Coll_Id__c.field-meta.xml
<CustomField>
    <fullName>Coll_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Call Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>