force-app/main/default/objects/Card_Product__c/fields/Company_Annual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Company_Annual_Revenue__c</fullName>
    <label>Company Annual Revenue</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>