force-app/main/default/objects/Card_Product__c/fields/Company_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Company_Email_Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Company Email Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>