force-app/main/default/objects/Card_Product__c/fields/Completed_Setup_in_FI_Date__c.field-meta.xml
<CustomField>
    <fullName>Completed_Setup_in_FI_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Completed Setup in FI Date</label>
    <type>DateTime</type>
</CustomField>