force-app/main/default/objects/Card_Product__c/fields/Contact_for_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Contact_for_Agreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This field lets Implementations know whom to send the Agreement to.</inlineHelpText>
    <label>Agreement Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Card Products (Contact for Agreement)</relationshipLabel>
    <relationshipName>Card_Products2</relationshipName>
    <type>Lookup</type>
</CustomField>