force-app/main/default/objects/Card_Product__c/fields/Contact_Title__c.field-meta.xml
<CustomField>
    <fullName>Contact_Title__c</fullName>
    <formula>Contact_for_Agreement__r.Title</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field automatically populates from the Contact record specified on the &quot;Agreement Contact&quot; field.</inlineHelpText>
    <label>Agreement Contact Title</label>
    <type>Text</type>
</CustomField>