force-app/main/default/objects/Card_Product__c/fields/Contract_Delivery_Method__c.field-meta.xml
<CustomField>
    <fullName>Contract_Delivery_Method__c</fullName>
    <label>Contract Delivery Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Physical Copy</fullName>
            </value>
            <value>
                <fullName>Electronic Copy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>