force-app/main/default/objects/Card_Product__c/fields/Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Type__c</fullName>
    <label>Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Original</fullName>
                <default>true</default>
                <label>Original</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>