force-app/main/default/objects/Card_Product__c/fields/Corporate_Resolution__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Resolution__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Corporate Resolution</label>
    <type>Checkbox</type>
</CustomField>