force-app/main/default/objects/Card_Product__c/fields/Counter_Offer_Amount__c.field-meta.xml
<CustomField>
    <fullName>Counter_Offer_Amount__c</fullName>
    <label>Counter Offer Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>