force-app/main/default/objects/Card_Product__c/fields/Counter_Offer_Pursued__c.field-meta.xml
<CustomField>
    <fullName>Counter_Offer_Pursued__c</fullName>
    <label>Counter Offer Pursued</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bank Guarantee</fullName>
            </value>
            <value>
                <fullName>Cash Secured</fullName>
            </value>
            <value>
                <fullName>Personal Guarantee</fullName>
            </value>
            <value>
                <fullName>Lower Credit Limit</fullName>
            </value>
            <value>
                <fullName>Alternate Product</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>