force-app/main/default/objects/Card_Product__c/fields/Credit_Analyst__c.field-meta.xml
<CustomField>
    <fullName>Credit_Analyst__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>(*) Credit Analyst Assigned</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Card_Products2</relationshipName>
    <type>Lookup</type>
</CustomField>