force-app/main/default/objects/Card_Product__c/fields/Credit_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Credit_Approval_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Credit Approval Date</label>
    <type>DateTime</type>
</CustomField>