force-app/main/default/objects/Card_Product__c/fields/Credit_Limit_Requested__c.field-meta.xml
<CustomField>
    <fullName>Credit_Limit_Requested__c</fullName>
    <label>(*) Credit Limit Requested</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>