force-app/main/default/objects/Card_Product__c/fields/Current_Card_Customer__c.field-meta.xml
<CustomField>
    <fullName>Current_Card_Customer__c</fullName>
    <label>Current Card Customer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>