force-app/main/default/objects/Card_Product__c/fields/Current_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Current_Relationship__c</fullName>
    <label>Current Relationship</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Existing Customer</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Prospect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>