force-app/main/default/objects/Card_Product__c/fields/Custom_Card_Options__c.field-meta.xml
<CustomField>
    <fullName>Custom_Card_Options__c</fullName>
    <label>(*) Custom Card Options</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Card_Product__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Company Logo Only</fullName>
            </value>
            <value>
                <fullName>Custom Card Art</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Still Needed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>