force-app/main/default/objects/Card_Product__c/fields/Data_Feed__c.field-meta.xml
<CustomField>
    <fullName>Data_Feed__c</fullName>
    <label>Data Feed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>