force-app/main/default/objects/Card_Product__c/fields/Data_Feed_Completed__c.field-meta.xml
<CustomField>
    <fullName>Data_Feed_Completed__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Data Feed Completed</label>
    <type>Date</type>
</CustomField>