force-app/main/default/objects/Card_Product__c/fields/Date_Counter_Offered__c.field-meta.xml
<CustomField>
    <fullName>Date_Counter_Offered__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Counter Offered</label>
    <type>Date</type>
</CustomField>