force-app/main/default/objects/Card_Product__c/fields/Date_Declined_by_Credit__c.field-meta.xml
<CustomField>
    <fullName>Date_Declined_by_Credit__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Declined by Credit</label>
    <type>Date</type>
</CustomField>