force-app/main/default/objects/Card_Product__c/fields/Date_Declined_for_Incompleteness__c.field-meta.xml
<CustomField>
    <fullName>Date_Declined_for_Incompleteness__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Declined for Incompleteness</label>
    <type>DateTime</type>
</CustomField>