force-app/main/default/objects/Card_Product__c/fields/Date_Implementation_Specialist_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Date_Implementation_Specialist_Assigned__c</fullName>
    <description>Works with workflow Implementation Specialist Assigned to populate a date/time value when the Product Implementation Specialist field is changed.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Implementation Specialist Assigned</label>
    <type>DateTime</type>
</CustomField>