force-app/main/default/objects/Card_Product__c/fields/Date_to_Credit__c.field-meta.xml
<CustomField>
    <fullName>Date_to_Credit__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date to Credit</label>
    <type>DateTime</type>
</CustomField>