force-app/main/default/objects/Card_Product__c/fields/Days_Specialist_Assigned_Card_Mailed__c.field-meta.xml
<CustomField>
    <fullName>Days_Specialist_Assigned_Card_Mailed__c</fullName>
    <formula>CASE(MOD( DATEVALUE(Date_Implementation_Specialist_Assigned__c) - DATE(1985,6,24),7), 
0 , CASE( MOD( DATEVALUE(Cards_Mailed_Date__c) - DATEVALUE(Date_Implementation_Specialist_Assigned__c) ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
1 , CASE( MOD( DATEVALUE(Cards_Mailed_Date__c) - DATEVALUE(Date_Implementation_Specialist_Assigned__c) ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
2 , CASE( MOD( DATEVALUE(Cards_Mailed_Date__c) - DATEVALUE(Date_Implementation_Specialist_Assigned__c) ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
3 , CASE( MOD( DATEVALUE(Cards_Mailed_Date__c) - DATEVALUE(Date_Implementation_Specialist_Assigned__c) ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
4 , CASE( MOD( DATEVALUE(Cards_Mailed_Date__c) - DATEVALUE(Date_Implementation_Specialist_Assigned__c) ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
5 , CASE( MOD( DATEVALUE(Cards_Mailed_Date__c) - DATEVALUE(Date_Implementation_Specialist_Assigned__c) ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
6 , CASE( MOD( DATEVALUE(Cards_Mailed_Date__c) - DATEVALUE(Date_Implementation_Specialist_Assigned__c) ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
999) 
+ 
(FLOOR(( DATEVALUE(Cards_Mailed_Date__c) - DATEVALUE(Date_Implementation_Specialist_Assigned__c) )/7)*5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># Days Specialist Assigned &amp; Card Mailed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>