force-app/main/default/objects/Card_Product__c/fields/DBA_Name__c.field-meta.xml
<CustomField>
    <fullName>DBA_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>DBA Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>