force-app/main/default/objects/Card_Product__c/fields/ERP_System_Feed_Version__c.field-meta.xml
<CustomField>
    <fullName>ERP_System_Feed_Version__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Data Feed System</label>
    <type>TextArea</type>
</CustomField>