force-app/main/default/objects/Card_Product__c/fields/Est_180_Day_Spend__c.field-meta.xml
<CustomField>
    <fullName>Est_180_Day_Spend__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Estimated 180 Day Spend</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>