force-app/main/default/objects/Card_Product__c/fields/Est_Total_Potential_Spend__c.field-meta.xml
<CustomField>
    <fullName>Est_Total_Potential_Spend__c</fullName>
    <inlineHelpText>This field captures all potential spend this client has not only with FNB but other institutions as well, determined by discussion with company</inlineHelpText>
    <label>Estimated Annual Spend</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>