force-app/main/default/objects/Card_Product__c/fields/Estimated_Number_of_Cards_Formula__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Number_of_Cards_Formula__c</fullName>
    <formula>Opportunity__r.Estimated_Number_of_Cards__c</formula>
    <label>Estimated Number of Cards</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>