force-app/main/default/objects/Card_Product__c/fields/Estimated_Number_of_Cards_Hist__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Number_of_Cards_Hist__c</fullName>
    <description>This Field is being used to look at Estimated # of Cards historically capturing information captured before &quot;Card Product&quot; was created and merging it when applicable with the new method.</description>
    <formula>if( ISBLANK( Estimated_Number_of_Cards_Formula__c ),  Estimated_Number_of_Cards__c  , Estimated_Number_of_Cards_Formula__c )</formula>
    <label>Estimated Number of Cards (Hist)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>