force-app/main/default/objects/Card_Product__c/fields/Executed_Agreement_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Executed_Agreement_Received_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Executed Agreement Received Date</label>
    <type>Date</type>
</CustomField>