force-app/main/default/objects/Card_Product__c/fields/Failure_Score_SCR2__c.field-meta.xml
<CustomField>
    <fullName>Failure_Score_SCR2__c</fullName>
    <label>Failure Score - SCR2</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>