force-app/main/default/objects/Card_Product__c/fields/FBC_Sales_Person__c.field-meta.xml
<CustomField>
    <fullName>FBC_Sales_Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>(*) FBC Sales Person</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Card_Products</relationshipName>
    <type>Lookup</type>
</CustomField>