force-app/main/default/objects/Card_Product__c/fields/Fee_Per_Card__c.field-meta.xml
<CustomField>
    <fullName>Fee_Per_Card__c</fullName>
    <label>Fee Per Card</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>15</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>