force-app/main/default/objects/Card_Product__c/fields/First_Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>First_Credit_Limit__c</fullName>
    <label>First Credit Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>