force-app/main/default/objects/Card_Product__c/fields/First_Usage_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Usage_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>First Usage Date</label>
    <type>DateTime</type>
</CustomField>