force-app/main/default/objects/Card_Product__c/fields/IBWS_Trained_Date__c.field-meta.xml
<CustomField>
    <fullName>IBWS_Trained_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>IBWS Trained Date</label>
    <type>DateTime</type>
</CustomField>