force-app/main/default/objects/Card_Product__c/fields/Implementation_Docs_Status__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Docs_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Implementation Docs Status</label>
    <type>TextArea</type>
</CustomField>